--- a/index.html
+++ b/index.html
@@ -52,25 +52,38 @@
     }
 
     function verifyUser(e) {
-      e.preventDefault();
-      const name = document.getElementById("fullName").value.trim();
-      const dob = document.getElementById("dob").value;
-      const error = document.getElementById("errorMsg");
+  e.preventDefault();
+  const name = document.getElementById("fullName").value.trim();
+  const dob = document.getElementById("dob").value;
+  const error = document.getElementById("errorMsg");
 
-      if (!name || !dob) {
-        error.textContent = "Please fill in all fields.";
-        return;
-      }
+  error.textContent = "";
 
-      const age = calculateAge(dob);
-      if (age < 11) {
-        error.textContent = "You must be over 10 years old to continue.";
-        return;
-      }
+  // Name and DOB validation
+  if (!name || !dob) {
+    error.textContent = "Please fill in all fields.";
+    return;
+  }
 
-      localStorage.setItem("taskflow_user", JSON.stringify({ name, dob }));
-      window.location.href = "app.html";
-    }
+  // Alphabetic name validation
+  const nameRegex = /^[A-Za-z\s]+$/;
+  if (!nameRegex.test(name)) {
+    error.textContent = "Name must contain only letters and spaces.";
+    return;
+  }
+
+  // Age check
+  const age = calculateAge(dob);
+  if (age < 11) {
+    error.textContent = "You must be over 10 years old to continue.";
+    return;
+  }
+
+  // All good – save and redirect
+  localStorage.setItem("taskflow_user", JSON.stringify({ name, dob }));
+  window.location.href = "app.html";
+}
+
 
     // Auto-redirect if user exists
     window.onload = () => {
